# ragphpchatbot

./: README.md  admin.html  composer.json  config.php  index.php  router.php  widget.js
ada/: README.md  rag.gpr
ada/src/: chatbot.adb  chunker.adb  chunker.ads  http_client.adb  http_client.ads  ingest.adb  ollama_client.adb  ollama_client.ads  query.adb  rag.adb  rag_config.adb  rag_config.ads  turso_client.adb  turso_client.ads  vector_math.adb  vector_math.ads
api/: admin_chat.php  auth.php  bootstrap.php  conversations.php  documents.php  faq.php  faq_analytics.php  faq_stats.php  global_settings.php  health.php  ingest.php  live_chat.php  sessions.php  team.php  widget_chat.php  widget_faq.php  workspaces.php
c/: Makefile  README.md  cJSON.c  cJSON.h  chatbot.c  chunker.c  chunker.h  config.h  http.c  http.h  ingest.c  json.c  json.h  ollama.c  ollama.h  query.c  rag.c  turso.c  turso.h
cpp/: CMakeLists.txt  README.md
cpp/include/: chunker.hpp  config.hpp  http.hpp  ollama.hpp  parser.hpp  turso.hpp
cpp/src/: chatbot.cpp  chunker.cpp  http.cpp  ingest.cpp  ollama.cpp  parser.cpp  query.cpp  rag.cpp  turso.cpp
partials/: footer.php  layout.php
src/: Chunker.php  DocumentParser.php  Ollama.php  Prompt.php  Turso.php  VectorSearch.php
src/Admin/: Auth.php  Database.php  DocumentManager.php  FaqManager.php  WorkspaceManager.php
